Fixed #39 Tool tip functionality enabled on Firefox.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,7 +48,6 @@ body {
 }
 
 .question-mark-icon {
-  content: url("/assets/question-mark-icon.jpg");
   vertical-align: text-top;
   width: 17px;
   height: 17px;
